[package]
name = "ob3"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel   = { version = "0.5" }
rayon               = { version = "1.11" }
slab                = { version = "0.4.11" }
thiserror           = { version = "2.0" }
tokio               = { version = "1", features = ["full"] }
tokio-util          = { version = "0.7" }
